[package]
name = "snowman"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true
name = "lock_master"
path = "src/macro/lock_master.rs"

[[bin]]
name = "snowman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.8.0", features = ["full"] }
warp = "0.3.1"
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Lock master deps
syn = { version = "1", features = ["full"] }
quote = "1"